分页器和登出